	fixed Type.enumParameters() and Type.typeOf() for PHP
	fixed null references in class constructors for array arguments
	fixed php.Boot.__string_rec() when invoked from toString
	added neko.NativeString and neko.NativeArray
	fixed php.Sys
	allowed optional Context in remoting connections
	fixed extern classes for flash < 8
	fixed inherited protected/private properties in as3 SWF library

2008-07-28: 2.0
	fixed current package bug in inherited constructor type
	delayed type-parameter constraints check (allow mutual rec extends for SPOD)
	improved unclosed macro error reporting
	haxe/PHP integration
	renamed NekoSocketConnection to SyncSocketConnection (php support)
	fixes in genAs3
	fix for flash9 : always coerce call return type
	set all private+protected names from SWF lib to public (allow override+reflect)
	flash9 : use findprop instead of findpropstrict for 'this' access (allow dynamic)
	don't allow nullness changes in overrided/implemented
	prevent typing hole with overriden polymorphic methods
	added neko.vm.Mutex and neko.vm.Deque (included in neko 1.7.1)
	added package remapping using --remap

2008-07-17: 2.0-RC1
	genneko : remove big array error (fixed in neko 1.7.1)
	fixed neko.net.ThreadRemotingServer.onXML
	genswf9 : fixed verify error with Null<Class> (was using dynamic access)
	small patch for jsfl support
	added .cca for faster string operations on Flash9/Flash/JS
	bugfix with inlined local variables
	upgraded flash9 api to flex3/player 9.0.115
	override is now mandatory, no more --override
	dynamic is now a keyword
	f9dynamic is now dynamic and is mandatory on all platforms
	public/private/dynamic are inherited by default when overriding a method
	removed Reflect.empty() : use {} instead
	changed #else by #elseif, added #else
	flash9 : optimized Hash,IntHash,StringBuf (use typed value)
	Reflect.field/setField/callMethod , Type.enumIndex and StringBuf methods are now inlined
	optimized haxe.Md5 : don't use statics